BusOne/src/objects/Veeva_Settings_vod__c.object
<CustomObject>
    <fields>
        <fullName>ENABLE_OFFLINE_CALL_OBJECTIVES_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will turn on the Call Objectives menu item on VMobile and iRep. This will display as a tab on the top navigation bar on VMobile and as a menu item on the home page of iRep.</description>
        <inlineHelpText>Checking this box will turn on the Call Objectives menu item on VMobile and iRep. This will display as a tab on the top navigation bar on VMobile and as a menu item on the home page of iRep.</inlineHelpText>
        <label>ENABLE_OFFLINE_CALL_OBJECTIVES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_OFFLINE_VINSIGHTS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether iRep uses VInsights offline or online. Offline Account Summary is turned off by default.</description>
        <label>ENABLE_OFFLINE_VINSIGHTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_ORDER_APPROVAL_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Setting for enabling Order Approval Automatic Request to SFDC Approvals. Set 0 to disable and 1 to enable.</description>
        <label>ENABLE ORDER APPROVAL</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENABLE_PARENT_ACCOUNT_ADDRESS_COPY_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines whether the Account being created should use the Address Inheritance logic, to copy from a Parent Account.</description>
        <label>ENABLE_PARENT_ACCOUNT_ADDRESS_COPY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_PARENT_ACCOUNT_WIZARD_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the Parent Account Wizard will be used when creating a new account from the My Accounts page.  Default value is Unchecked.</description>
        <inlineHelpText>Designates whether the Parent Account Wizard will be used when creating a new account from the My Accounts page.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_PARENT_ACCOUNT_WIZARD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_PARENT_WIZARD_OPT_ACCT_TYPES_vod__c</fullName>
        <defaultValue>&quot;ENABLE_PARENT_WIZARD_OPT_ACCT_TYPES;;Account&quot;</defaultValue>
        <description>This determines a subset of Parent account types that a Account can be created from in the New Account Wizard&apos;s Parent Wizard</description>
        <label>ENABLE PARENT WIZARD OPT ACCT TYPES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENABLE_RECEIPT_ACTIVATION_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ENABLE_RECEIPT_ACTIVATION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_REMOTE_INTERACTION_TERMS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the display of a terms statement when a remote interaction is initiated using the Specialist button in the iRep media player. Default value is Unchecked.</description>
        <inlineHelpText>Enables the display of a terms statement when a remote interaction is initiated using the Specialist button in the iRep media player. Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_REMOTE_INTERACTION_TERMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_SAMPLES_ON_SIGN_SAVE_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true, then the online triggers will create the Sample Transactions if the Call is status of Saved or Submitted and the Signature Date is populated. Profile level configurations will be ignored, this is org wide only.</description>
        <label>ENABLE_SAMPLES_ON_SIGN_SAVE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_SAMPLE_CARD_LICENSE_CHECK_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Designates whether license validation should be performed against Call Reports where a Sample Card has been provided. When enabled a user cannot submit a sample call for an account address with a License Valid to Sample status of &apos;Invalid&apos;.  Default value is Checked.</description>
        <inlineHelpText>Designates whether license validation should be performed against Call Reports where a Sample Card has been provided. Default value is Checked.</inlineHelpText>
        <label>ENABLE_SAMPLE_CARD_LICENSE_CHECK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_SAMPLE_DISTRIBUTED_BY_SIG_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Distributed By value is displayed on the signature page. If the Company Name is available the field value will be automatically populated.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the Distributed By value is displayed on the signature page. If the Company Name is available the field value will be automatically populated.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_SAMPLE_DISTRIBUTED_BY_SIG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_SAMPLE_LIMIT_MONITOR_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the sample limit monitor to show sample limits on the call.</description>
        <inlineHelpText>Enables the sample limit monitor to show sample limits on the call.</inlineHelpText>
        <label>ENABLE_SAMPLE_LIMIT_MONITOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_SCHEDULE_MEDICAL_EVENT_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Medical Events will appear in the Day and Week Views in the calendar</description>
        <inlineHelpText>When checked, Medical Events will appear in the Day and Week Views in the calendar</inlineHelpText>
        <label>ENABLE_SCHEDULE_MEDICAL_EVENT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_SPECIALIST_LOOKUP_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Specialist button is displayed in the iRep CLM media player.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the Specialist button is displayed in the iRep CLM media player.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_SPECIALIST_LOOKUP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_TABLET_MYSAMPLES_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the My Samples tab is available in the VMobile Tablet application.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the My Samples tab is available in the VMobile Tablet application.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_TABLET_MYSAMPLES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_TABLET_VINSIGHTS_TAB_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the VInsights tab is available in the VMobile Tablet application.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the VInsights tab is available in the VMobile Tablet application.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_TABLET_VINSIGHTS_TAB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_TACTIC_LIST_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Apply Product Plan button is displayed at the Product Strategy level or the Product Tactic level. If enabled, the Apply Product Plan button is displayed at the individual Tactic level.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the Apply Product Plan button is displayed at the Product Strategy level or the Product Tactic level. Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_TACTIC_LIST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_TRANSFER_WORKSHEET_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Print Transfer Worksheet link is displayed on the My Samples page.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the Print Transfer Worksheet link is displayed on the My Samples page.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_TRANSFER_WORKSHEET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_USER_CALL_SYNC_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables the sync of Call records where the User is an Attendee on the Call Reports.</description>
        <inlineHelpText>Enables the sync of Call records where the User is an Attendee on the Call Reports.</inlineHelpText>
        <label>ENABLE_USER_CALL_SYNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_VINSIGHTS_FILTERS_CONFIG_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provides the ability to configure the report filters displayed in specific VInsights reports. Default value is Unchecked.</description>
        <inlineHelpText>Provides the ability to configure the report filters displayed in specific VInsights reports.  Default value is Unchecked.</inlineHelpText>
        <label>ENABLE_VINSIGHTS_FILTERS_CONFIG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENABLE_VINSIGHTS_PRODUCTS_CONFIG_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, enables VInsights administrator to configure products shown in the Display Products filter.</description>
        <inlineHelpText>If checked, enables VInsights administrator to configure products shown in the Display Products filter, based on the Display Order field on Analytics Product Groups.</inlineHelpText>
        <label>ENABLE_VINSIGHTS_PRODUCTS_CONFIG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENHANCED_COACHING_COLS_vod__c</fullName>
        <defaultValue>&quot;ENHNCD_COACHING_COLS;;Surveys&quot;</defaultValue>
        <description>This setting points to a Veeva Message that holds a configurable list of columns that will be displayed on the offline platforms.</description>
        <label>Enhanced Coaching Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENHANCED_COACHING_MODE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This setting determines which enhanced coaching mode is to be used.</description>
        <label>Enhanced Coaching Mode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENHANCED_LOOKUPS_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Setting will enable Enhanced Lookup Dialogs &amp; Filters. Please see documentation for more information.</description>
        <label>Enable Enhanced Lookups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EVENT_ATTENDEE_VOD_C_WHERE_CLAUSE__c</fullName>
        <defaultValue>&quot;EVENT_ATTENDEE_VOD__C_WHERE_CLAUSE;;Blackberry&quot;</defaultValue>
        <description>Only download event attendee records for medical events that you have access to.</description>
        <inlineHelpText>Where clause for downloading only relevant records for Event_Attendee_vod__c</inlineHelpText>
        <label>EVENT_ATTENDEE_VOD__C_WHERE_CLAUSE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENT_GRID_VIEW_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Setting to turn on the Event Grid View for iPad. Please see documentation for more information.</description>
        <label>Event Grid View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EVENT_WHERE_CLAUSE_vod__c</fullName>
        <defaultValue>&quot;EVENT_WHERE_CLAUSE;;Blackberry&quot;</defaultValue>
        <description>Blackberry WHERE CLAUSE filter for Event object.  Default value is WHERE (ActivityDateTime ›= LAST_N_DAYS:30 OR ActivityDate ›= LAST_N_DAYS:30) AND @@VOD_USERS_IN_MY_TERRITORY:OwnerId@@</description>
        <inlineHelpText>Where clause used to filter the Event records downloaded to the VMobile BlackBerry application.</inlineHelpText>
        <label>EVENT_WHERE_CLAUSE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTERNAL_ID_vod__c</fullName>
        <description>External ID used for Metadata migration.</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for Metadata migration.</inlineHelpText>
        <label>EXTERNAL_ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enable_Account_Metric_Detail_Filter_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to True, Product Metrics per Detail Group defined on the Account act as an additional filter for Call Detail quick entry. Detail items for Groups that are not captured in Product Metrics for the Account continue to be available through Search. Default is Unchecked.</description>
        <inlineHelpText>Determines whether Product Metrics per Detail Group defined on the Account act as an additional filter for Call Detail quick entry. Detail items for Groups that are not captured in Product Metrics for the Account continue to be available through Search.</inlineHelpText>
        <label>Enable_Account_Metric_Detail_Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Child_Account_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, specified CRM activity is performed against the Child Account records instead of the Account records. This setting is used to replace the Business Professional record type. The activity performed against Child Account records are: My Account Search and Profile View, My Schedule, Call Report and Attendee Search, and Multi-Channel Cycle Plans.</description>
        <label>Enable Child Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Copy_To_Call_Cycle_Button_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Copy button displays in the My Schedule Week view.  If Checked, a user can copy their weekly schedule to a call cycle by clicking the Copy button.  Requires the Call Cycle view to be displayed in My Schedule.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the Copy button displays in the My Schedule Week view.  If Checked, a user can copy their weekly schedule to a call cycle by clicking the Copy button.  Default value is Unchecked.</inlineHelpText>
        <label>Enable_Copy_To_Call_Cycle_Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Flash_Sphere_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the prior Flash based version or the HTML5 version of the Sphere of Influence is displayed in the Account Detail page. If Checked, the Flash based Sphere of Influence will be displayed.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the prior Flash based version or the HTML5 version of the Sphere of Influence is displayed in the Account Detail page. Default value is Unchecked.</inlineHelpText>
        <label>Enable Flash Sphere</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Group_Call_Attendee_Display_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables the display of the number of attendees for a group call or for individual call with attendees in the My Schedule Day and Week views.  The value displays when a user hovers over a call in the calendar.  Default value is Unchecked.</description>
        <inlineHelpText>Enables the display of the number of attendees for a group call or for individual call with attendees in the My Schedule Day and Week views.  Default value is Unchecked.</inlineHelpText>
        <label>Enable_Group_Call_Attendee_Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_SSO_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if SSO is enabled. Setting value should be the same as the current Profile&apos;s &quot;IsSsoEnabloed&quot; value (English label for Profile field IsSsoEnabloed is &quot;Is Single Sign On Enabled&quot;)</description>
        <label>Enable SSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Sample_Receipt_Grouping_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System groups all pending sample receipts by Shipment ID.</description>
        <label>Enable_Sample_Receipt_Grouping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Samples_On_Save_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provides the ability to generate Sample Transactions on the Save of a Call Report with an electronic Signature or Sample Card. If Unchecked, Sample Transactions are generated on Submit of a Call Report.  Default value is Unchecked.</description>
        <inlineHelpText>Provides the ability to generate Sample Transactions on the Save of a Call Report with an electronic Signature or Sample Card. Default value is Unchecked.</inlineHelpText>
        <label>Enable Samples On Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Signature_Graphic_Picklist_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the product graphic picklist displays in the signature page in the VMobile Tablet application.  The picklist contains a list of all the product names that correspond to a detailed or sampled product on the Call Report. Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the product graphic picklist displays in the signature page in the VMobile Tablet application.  Default value is Unchecked.</inlineHelpText>
        <label>Enable_Signature_Graphic_Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Simple_Hierarchy_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines the type of Account Hierarchy supported by the application.  If Checked, a Child Account can be associated to only one parent account, else a Child Account can be associated to many parent accounts. Default value is Unchecked.</description>
        <inlineHelpText>Determines the type of Account Hierarchy supported by the application.  Default value is Unchecked.</inlineHelpText>
        <label>Enable Simple Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Simple_Rebate_Addition_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the algorithm for combining Pricing Rules of different types is linear (simple) or iterative.  Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the algorithm for combining Pricing Rules of different types is linear (simple) or iterative.  Default value is Unchecked.</inlineHelpText>
        <label>Enable Simple Rebate Addition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_User_Assigned_Territory_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Territory field is displayed as a picklist or read-only field when creating a new Account using the New Record Type Wizard or Parent Account Wizard. Default value is Unchecked.</description>
        <inlineHelpText>Determines whether the Territory field is displayed as a picklist or read-only field when creating a new Account using the New Record Type Wizard or Parent Account Wizard. Default value is Unchecked.</inlineHelpText>
        <label>Enable User Assigned Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FORGOT_PASSWORD_URL_vod__c</fullName>
        <defaultValue>&quot;FORGOT_PASSWORD_URL;;TABLET&quot;</defaultValue>
        <description>Determines the action that occurs when a user clicks the Forgot Password link in the VMobile Tablet login screen. The link value can direct the user to a website URL or send an email using the mailto: tag.  If a value is not configured the Forgot Password link will not be displayed.  Default value is blank.</description>
        <inlineHelpText>Determines the action that occurs when a user clicks the Forgot Password link in the VMobile Tablet login screen.  Default value is blank.</inlineHelpText>
        <label>FORGOT_PASSWORD_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_ONLINE_URL_REDIRECT_vod__c</fullName>
        <defaultValue>&quot;GO_ONLINE_URL_REDIRECT;;Common&quot;</defaultValue>
        <description>Delimited string of URL redirects/replacements.</description>
        <inlineHelpText>Delimited string of URL redirects/replacements.</inlineHelpText>
        <label>GO_ONLINE_URL_REDIRECT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOME_ALERTS_DISPLAY_ROWS_vod__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Determines the number of Alert records displayed at one time in the VMobile Home Page.  Default value is 5.</description>
        <inlineHelpText>Determines the number of Alert records displayed at one time in the VMobile Home Page.  Default value is 5.</inlineHelpText>
        <label>HOME_ALERTS_DISPLAY_ROWS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HTML_LIST_vod__c</fullName>
        <defaultValue>&quot;HTML_LIST;;REFRESH_HTML&quot;</defaultValue>
        <description>This setting is no longer used by the application.</description>
        <inlineHelpText>This setting is no longer used by the application.</inlineHelpText>
        <label>HTML_LIST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_TEMPLATE_vod__c</fullName>
        <defaultValue>&quot;HTML_TEMPLATE;;SampleReceipt&quot;</defaultValue>
        <description>Reference to the HTML template used when printing a Sample Receipt.  Configured using the corresponding HTML_TEMPLATE Veeva Message.</description>
        <inlineHelpText>Reference to the HTML template used when printing a Sample Receipt.</inlineHelpText>
        <label>HTML_TEMPLATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_CONTINUOUS_MONITORING_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enables copy of values from last submitted Inventory Monitoring record: 0= disabled, 1 = copies values from last submitted IM.</description>
        <label>Continuous Inventory Monitoring</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM_INVENTORY_LINE_COLUMN_WIDTH_vod__c</fullName>
        <defaultValue>&quot;IM_INVENTORY_LINE_COLUMN_WIDTH;;INVENTORY_MANAGEMENT&quot;</defaultValue>
        <description>Reference to a Veeva message that defines pixel widths for columns in the Inventory Lines list in the inventory entry window.</description>
        <label>IM_INVENTORY_LINE_COLUMN_WIDTH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_TOUCH_ENTRY_MODE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines the IM entry mode behavior on touch devices: 0 = no change, 1 = Mass Add, 2 = Save Valid Lines, 3 = Mass Add and Save Valid Lines, 4 = Contract Products Mass Add (saves valid lines only)</description>
        <label>Inventory Monitoring Touch Entry Mode</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INCREMENTAL_CALLS_SYNC_DELAY_MINUTES_vod__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Designates the number of minutes between the running of the incremental Call Sync process for the VMobile BlackBerry application. Default value is 60 minutes.</description>
        <inlineHelpText>Designates the number of minutes between the running of the incremental Call Sync process for the VMobile BlackBerry application. Default value is 60 minutes.</inlineHelpText>
        <label>INCREMENTAL_CALLS_SYNC_DELAY_MINUTES</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPAD_MAXIMUM_SAMPLES_vod__c</fullName>
        <defaultValue>8</defaultValue>
        <description>Identifies the value for the maximum number of samples allowed to be signed for on the iPad. Default value is 8; increasing the value may result in scrolling signature page.</description>
        <inlineHelpText>Identifies the value for the maximum number of samples allowed to be signed for on the iPad. Default value is 8; increasing the value may result in scrolling signature page.</inlineHelpText>
        <label>iPad Maximum Samples</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JDNET_DETAIL_COLS_vod__c</fullName>
        <defaultValue>&quot;JDNET_DETAIL_COLS;;Analytics&quot;</defaultValue>
        <description>comma separated list of fields to display on the JDNet Detail Report</description>
        <inlineHelpText>comma separated list of fields to display on the JDNet Detail Report</inlineHelpText>
        <label>JDNET_DETAIL_COLS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDNET_DETAIL_SUMMARY_COLS_vod__c</fullName>
        <defaultValue>&quot;JDNET_DETAIL_SUMMARY_COLS;;Analytics&quot;</defaultValue>
        <description>comma separated list of fields to display on the JDNet Detail Summary Report</description>
        <inlineHelpText>comma separated list of fields to display on the JDNet Detail Summary Report</inlineHelpText>
        <label>JDNET_DETAIL_SUMMARY_COLS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KAM_ENABLE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Use to activate KAM functionality</description>
        <label>KAM_ENABLE</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kit_Components_Fixed_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Designates whether users enter an order quantity for a Product Kit or enter order quantities for individual Kit Items. When enabled users enter order quantities for Product Kits. Default value is Checked.</description>
        <inlineHelpText>Designates whether users enter an order quantity for a Product Kit or enter order quantities for individual Kit Items. Default value is Checked.</inlineHelpText>
        <label>Kit_Components_Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Address_Run_vod__c</fullName>
        <description>Contains the last run time for the Address Inheritance batch address update process.  For Veeva Internal Use Only.</description>
        <inlineHelpText>Contains the last run time for the Address Inheritance batch address update process.</inlineHelpText>
        <label>Last Address Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MAIL_TO_CALL_3_PARAMS_vod__c</fullName>
        <defaultValue>&quot;MAIL_TO_CALL_3_PARAMS;;TABLET&quot;</defaultValue>
        <description>Mail-to format for Call data with 3 parameters.</description>
        <inlineHelpText>Mail-to format for Call data with 3 parameters.</inlineHelpText>
        <label>MAIL_TO_CALL_3_PARAMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAIL_TO_EVENT_4_PARAMS_vod__c</fullName>
        <defaultValue>&quot;MAIL_TO_EVENT_4_PARAMS;;TABLET&quot;</defaultValue>
        <description>Mail-to format for Event data with 4 parameters.</description>
        <inlineHelpText>Mail-to format for Event data with 4 parameters.</inlineHelpText>
        <label>MAIL_TO_EVENT_4_PARAMS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAXIMUM_SAMPLES_vod__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Configured value for the maximum number of samples to be displayed in the Signature page for VMobile Tablet application.  Can be used as a limit for the number of samples that can be signed for by a Physician.  Default value is 20.</description>
        <inlineHelpText>Configured value for the maximum number of samples to be displayed in the Signature page for VMobile Tablet application.  Default value is 20.</inlineHelpText>
        <label>MAXIMUM_SAMPLES</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_ACCOUNTS_IPAD_vod__c</fullName>
        <defaultValue>15000</defaultValue>
        <description>Maximum number of Accounts allowed for download to the VMobile iPad applicaiton.  Maximum value is 15000.</description>
        <inlineHelpText>Maximum number of Accounts allowed for download to the VMobile iPad application.  Maximum value is 15000.</inlineHelpText>
        <label>Max Accounts iPad</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_ACCOUNTS_vod__c</fullName>
        <defaultValue>50000</defaultValue>
        <description>Veeva Internal Use Only. Do Not Change.</description>
        <inlineHelpText>Veeva Internal Use Only. Do Not Change.</inlineHelpText>
        <label>MAX_ACCOUNTS</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_ACCT_THRESHOLD_vod__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Configuration property for My Accounts.  Default value is 1000.</description>
        <inlineHelpText>Configuration property for My Accounts.  Default value is 1000.</inlineHelpText>
        <label>MAX_ACCT_THRESHOLD</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_ATTACH_SIZE_vod__c</fullName>
        <defaultValue>5000000</defaultValue>
        <description>Maximum size in bytes for attachments.  Default limit is 5000000 bytes which is 5 MB.</description>
        <inlineHelpText>Maximum size in bytes for attachments. Default limit is 5000000 bytes.</inlineHelpText>
        <label>MAX_ATTACH_SIZE</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_CALL_AGE_vod__c</fullName>
        <defaultValue>180</defaultValue>
        <description>Configured value for maximum age of calls on the VMobile Tablet application in days.  Default value is 180 days.</description>
        <inlineHelpText>Configured value for maximum age of calls on the VMobile Tablet application in days.  Default value is 180 days.</inlineHelpText>
        <label>MAX_CALL_AGE</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAX_SAMPLE_LINES_vod__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Maximum number of sample lines in a group.  Default value is 10.</description>
        <inlineHelpText>Maximum number of sample lines in a group. Default is 10.</inlineHelpText>
        <label>MAX_SAMPLE_LINES</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MEDICAL_INSIGHTS_COLUMNS_vod__c</fullName>
        <defaultValue>&quot;Date_vod__c,Summary_vod__c,Account_vod__c,Medical_Event_vod__c,Clinical_Trial_vod__c,Publication_vod__c&quot;</defaultValue>
        <description>This setting holds a comma list of Medical Insights field API names. These fields will show as columns in the home page Medical Insights list on offline platforms.</description>
        <inlineHelpText>Comma delimited list of fields to show as columns in the home page Medical Insights list. Maximum number of fields is 15.</inlineHelpText>
        <label>Medical Insights Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEDICAL_INSIGHTS_RESTRICTED_WORDS_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validates Key Medical Insight records for the words and phrases defined in the MEDICAL_INSIGHTS_RESTRICTED_WORDS Veeva Message.</description>
        <label>Medical Insights Restricted Words</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MESSAGE_VOD_WHERE_CLAUSE_vod__c</fullName>
        <defaultValue>&quot;MESSAGE_VOD__C_WHERE_CLAUSE;;Blackberry&quot;</defaultValue>
        <description>BlackBerry Messages Where Clause</description>
        <inlineHelpText>Where clause used to filter the Message records downloaded to the VMobile BlackBerry application.</inlineHelpText>
        <label>MESSAGE_VOD__C_WHERE_CLAUSE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>